--- a/app/index.html
+++ b/app/index.html
@@ -23,18 +23,11 @@
   <link href="css/select2-bootstrap.css" rel="stylesheet" >
   <!-- /build -->
 
-
-
 </head>
 <body>
 
   <div class="cropper" id="crossfade">
     <img class="title-image async" data-src="images/Header001.png"/>
-    <!--
-      <img class="title-image" src="images/Header002.png"/>
-      <img class="title-image" src="images/Header003.png"/>
-      <img class="title-image" src="images/Header004.png"/>
-    -->
   </div>
 
   <!-- Navigation -->
@@ -263,11 +256,11 @@
                   </div>
                   <div class="map-box">
                     <label class='centered'>High migration</label>
-                    <div class="well" id="youngstown-high"></div>
+                    <div id="youngstown-high"></div>
                   </div>
                   <div class="map-box">
                     <label class='centered'>Low migration</label>
-                    <div class="well" id="youngstown-low"></div>
+                    <div id="youngstown-low"></div>
                   </div>
                   <div class="inline-map-legend" id="youngstown"></div>
                 </div>
@@ -317,11 +310,11 @@
                   </div>
                   <div class="map-box">
                     <label class='centered'>High migration</label>
-                    <div class="well" id="atlanta-high"></div>
+                    <div id="atlanta-high"></div>
                   </div>
                   <div class="map-box">
                     <label class='centered'>Low migration</label>
-                    <div class="well" id="atlanta-low"></div>
+                    <div id="atlanta-low"></div>
                   </div>
                   <div class="inline-map-legend" id="atlanta"></div>
                 </div>
@@ -459,22 +452,22 @@
                   </div>
                   <div class="map-box">
                     <label class='centered'>All Races</label>
-                    <div class="well" id="races-inline-all"></div>
+                    <div id="races-inline-all"></div>
                   </div>
                   <div class="map-box">
                     <label class='centered'>White</label>
-                    <div class="well" id="races-inline-white"></div>
+                    <div id="races-inline-white"></div>
                   </div>
                   <div class="inline-map-legend-container">
                     <div class="inline-map-legend" id="races-inline"></div>
                   </div>
                   <div class="map-box">
                     <label class='centered'>Black</label>
-                    <div class="well" id="races-inline-black"></div>
+                    <div id="races-inline-black"></div>
                   </div>
                   <div class="map-box">
                     <label class='centered'>Hispanic</label>
-                    <div class="well" id="races-inline-hispanic"></div>
+                    <div id="races-inline-hispanic"></div>
                   </div>
                 </div>
 
@@ -592,7 +585,6 @@
               </div>
             </div>
           </div>
-          
         </div>
       </div>
     </div>
@@ -631,111 +623,103 @@
 
             <!-- Assumption settings -->
             <div class="row">
-              <div class="col-md-12">
+              <div class="col-md-12" id="map-top">
 
-                <h2 id="map-top"> Pick rates for births, deaths, and migration:</h2>
+                <div class="col-sm-3">
 
-                <div class="col-sm-4 margin-group">
-                  <label class="select-label">BIRTHS</label>
-                  <div class="btn-group btn-group-justified settings" id="fertility">
-                    <div class="btn-group btn-group-sm">
-                      <button
-                        type="button"
-                        class="btn settings-button active"
-                        id="low"
-                        >
-                        Low</button>
+                    <div class="settings-header">1. Select rates: </div>
+
+                    <label class="select-label">Births</label>
+                    <div class="btn-group btn-group-justified settings" id="fertility">
+                      <div class="btn-group btn-group-sm">
+                        <button
+                          type="button"
+                          class="btn settings-button active"
+                          id="low"
+                          >
+                          Low</button>
+                      </div>
+                      <div class="btn-group btn-group-sm">
+                        <button
+                          type="button"
+                          class="btn settings-button"
+                          id="avg"
+                          >
+                          Avg.</button>
+                      </div>
+                      <div class="btn-group btn-group-sm">
+                        <button
+                          type="button"
+                          class="btn settings-button"
+                          id="high"
+                          >
+                          High</button>
+                      </div>
                     </div>
-                    <div class="btn-group btn-group-sm">
-                      <button
-                        type="button"
-                        class="btn settings-button"
-                        id="avg"
-                        >
-                        Avg.</button>
+
+                    <label class="select-label">Deaths</label>
+                    <div class="btn-group btn-group-justified settings" id="mortality">
+                      <div class="btn-group btn-group-sm">
+                        <button
+                          type="button"
+                          class="btn settings-button active"
+                          id="low"
+                          >
+                          Low</button>
+                      </div>
+                      <div class="btn-group btn-group-sm">
+                        <button
+                          type="button"
+                          class="btn settings-button"
+                          id="avg"
+                          >
+                          Avg.</button>
+                      </div>
+                      <div class="btn-group btn-group-sm">
+                        <button
+                          type="button"
+                          class="btn settings-button"
+                          id="high"
+                          >
+                          High</button>
+                      </div>
                     </div>
-                    <div class="btn-group btn-group-sm">
-                      <button
-                        type="button"
-                        class="btn settings-button"
-                        id="high"
-                        >
-                        High</button>
+
+                    <label class="select-label">Migration</label>
+                    <div class="btn-group btn-group-justified settings" id="migration">
+                      <div class="btn-group btn-group-sm">
+                        <button
+                          type="button"
+                          class="btn settings-button active"
+                          id="low"
+                          >
+                          Low</button>
+                      </div>
+                      <div class="btn-group btn-group-sm">
+                        <button
+                          type="button"
+                          class="btn settings-button"
+                          id="avg"
+                          >
+                          Avg.</button>
+                      </div>
+                      <div class="btn-group btn-group-sm">
+                        <button
+                          type="button"
+                          class="btn settings-button"
+                          id="high"
+                          >
+                          High</button>
+                      </div>
                     </div>
-                  </div>
+
                 </div>
 
-                <div class="col-sm-4 margin-group">
-                  <label class="select-label">DEATHS</label>
-                  <div class="btn-group btn-group-justified settings" id="mortality">
-                    <div class="btn-group btn-group-sm">
-                      <button
-                        type="button"
-                        class="btn settings-button active"
-                        id="low"
-                        >
-                        Low</button>
-                    </div>
-                    <div class="btn-group btn-group-sm">
-                      <button
-                        type="button"
-                        class="btn settings-button"
-                        id="avg"
-                        >
-                        Avg.</button>
-                    </div>
-                    <div class="btn-group btn-group-sm">
-                      <button
-                        type="button"
-                        class="btn settings-button"
-                        id="high"
-                        >
-                        High</button>
-                    </div>
-                  </div>
-                </div>
+                <div class="col-sm-6 border-group">
 
-                <div class="col-sm-4 margin-group">
-                  <label class="select-label">MIGRATION</label>
-                  <div class="btn-group btn-group-justified settings" id="migration">
-                    <div class="btn-group btn-group-sm">
-                      <button
-                        type="button"
-                        class="btn settings-button active"
-                        id="low"
-                        >
-                        Low</button>
-                    </div>
-                    <div class="btn-group btn-group-sm">
-                      <button
-                        type="button"
-                        class="btn settings-button"
-                        id="avg"
-                        >
-                        Avg.</button>
-                    </div>
-                    <div class="btn-group btn-group-sm">
-                      <button
-                        type="button"
-                        class="btn settings-button"
-                        id="high"
-                        >
-                        High</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+                  <div class="settings-header">2. Filter by: </div>
 
-
-            <!-- Demographic Settings -->
-            <div class="row">
-              <div class="col-md-12">
-
-                <h2> How this scenario affects...</h2>
-
-                <div class="col-sm-6 margin-group">
-                  <label class="select-label">AGE</label>
+                  <label class="select-label">Age</label>
 
                   <div class="btn-group btn-group-justified settings" id="age">
 
@@ -786,11 +770,7 @@
 
                   </div>
 
-                </div>
-
-
-                <div class="col-sm-6 margin-group">
-                  <label class="select-label">RACE</label>
+                  <label class="select-label">Race</label>
 
                   <div class="btn-group btn-group-justified settings" id="race">
 
@@ -841,20 +821,60 @@
 
                   </div>
 
+                  <label class="select-label">Boundary</label><br/>
+
+                  <div class="btn-group settings" id="boundary">
+
+                    <div class="btn-group btn-group-sm">
+                      <button
+                        type="button"
+                        class="btn settings-button"
+                        id="states"
+                        >
+                        STATES</button>
+                    </div>
+
+                    <div class="btn-group btn-group-sm">
+                      <button
+                        type="button"
+                        class="btn settings-button active"
+                        id="czones"
+                        >
+                        COMMUTING ZONES</button>
+                    </div>
+                  </div>
+
+                  <span id="boundary-info">
+                    What is this?
+                  </span>
+
+                </div>
+
+                <div class="col-sm-3">
+
+                  <div class="settings-header">3. Year Change: </div>
+
+                  <div id="year-select-container">
+                    <label class="select-label">From</label>
+                    <select class="form-control year-select" id="start"></select>
+                    <label class="select-label">To</label>
+                    <select class="form-control year-select" id="end"></select>
+                  </div>
+
                 </div>
 
               </div>
+
             </div>
+
+            <hr/>
 
             <div class="row">
               <div class="col-sm-12">
-                <h2> Percent change from...</h2>
-                <div class="col-sm-5" id="year-select-container">
-                  <select class="form-control year-select" id="start"></select>
-                  <div id="year-to"> to </div>
-                  <select class="form-control year-select" id="end"></select>
-                </div>
-                <div class="col-sm-7">
+                <div class="col-sm-12">
+                  <div class="settings-header">
+                    Rollover key to isolate population change range on map
+                  </div>
                   <div class="legend" id="map_container-legend"></div>
                 </div>
               </div>
@@ -862,7 +882,7 @@
 
             <div class="row">
               <div class="col-md-12">
-                <div id="map_container" class="well"></div>
+                <div id="map_container"></div>
               </div>
             </div>
 
@@ -885,13 +905,11 @@
 
                     <div class="col-sm-8 col-sm-pull-4">
                       <div class="color-label">IN DETAIL
-                        <span id="detail-years"> 2000-2030
+                        <span id="detail-years"></span>
                       </div>
-                      <h1 id="region">USA</h1>
+                      <h1 id="region"></h1>
 
-                      <div id="detail-settings">
-                        Average Birth, Average Death, Average Migration
-                      </div>
+                      <div id="detail-settings"></div>
 
                       <table id="detail-table">
                         <tr>
@@ -914,8 +932,6 @@
                       </table>
 
                     </div>
-
-
 
                   </div>
 
@@ -946,6 +962,27 @@
                       <div class="pyramid col-xs-4 col-sm-2" id="hispanic"></div>
                       <div class="pyramid col-xs-4 col-sm-2" id="other"></div>
                     </div>
+                  </div>
+                </div>
+
+
+                <div class="row">
+                  <div class="col-sm-12">
+                    <h2>Data Available for Download</h2>
+                    <ul>
+                      <li>
+                        <a id="download-czone" href="">All data for all scenarios for the selected commuting zone.</a>
+                      </li>
+                      <li>
+                        <a id="download-xwalk" href="data/Download/PopProj_GeoXwalk.xlsx">Geographic crosswalk between counties and commuting zones.</a>
+                      </li>
+                      <li>
+                        <a id="download-map" href="">Map data for current assumption settings.</a>
+                      </li>
+                      <li>
+                        <a id="download-full" href="data/Download/AllCZ_AllFert_AllMort_AllMig.csv">All available data (0.5GB).</a>
+                      </li>
+                    </ul>
                   </div>
                 </div>
 
