state mode enabled

--- a/app/index.html
+++ b/app/index.html
@@ -218,6 +218,7 @@
                     data-fertility="avg"
                     data-mortality="avg"
                     data-migration="high"
+                    data-boundary="czones"
                     data-czone="0"
                     data-age="all"
                     data-race="all"
@@ -235,6 +236,7 @@
                     data-fertility="avg"
                     data-mortality="avg"
                     data-migration="low"
+                    data-boundary="czones"
                     data-czone="0"
                     data-age="all"
                     data-race="all"
@@ -844,7 +846,13 @@
                     </div>
                   </div>
 
-                  <span id="boundary-info">
+                  <span id="boundary-info"
+                      data-toggle = "tooltip"
+                      data-trigger = "hover"
+                      data-placement = "top"
+                      data-html = "true"
+                      data-title = "Make the map display statistics calculated for states or commuting zones by clicking an option to the left."
+                      data-container = "body">
                     What is this?
                   </span>
 
