simultanious zoom for small maps

--- a/app/index.html
+++ b/app/index.html
@@ -605,20 +605,24 @@
       <div class="view_button right" id="feature">READ THE<BR/> ARTICLE</div>
       <div class="fill">
         <div class="container">
-          <div class="col-md-10 col-md-offset-1 item-container"  id="map-tool-container">
+          <div class="col-md-12 item-container"  id="map-tool-container">
 
             <div class="row" id="top-row">
               <div class="col-md-12">
 
-                <h1>Mapping America's Futures</h1>
+                <!-- extra container to keep alignment with lower rows -->
+                <div class="col-md-12">
 
-                <p>
-                  Test possible scenarios for how the US population might change in 2020 and 2030. The map will change depending on whether users choose low, average, or high rates for future births, deaths, or migration. <a class="read-more">Read more</a>
-                </p>
-                <p id="map-more-text">
-                  The map divides the United States into 740 commuting zones—places connected by local economies, which can cross city and state boundaries, and that include metro and rural areas. Click on a commuting zone for detailed information below.
-                </p>
-                <hr/>
+                  <h1>Mapping America's Futures</h1>
+
+                  <p>
+                    Test possible scenarios for how the US population might change in 2020 and 2030. The map will change depending on whether users choose low, average, or high rates for future births, deaths, or migration. <a class="read-more">Read more</a>
+                  </p>
+                  <p id="map-more-text">
+                    The map divides the United States into 740 commuting zones—places connected by local economies, which can cross city and state boundaries, and that include metro and rural areas. Click on a commuting zone for detailed information below.
+                  </p>
+                  <hr/>
+                </div>
               </div>
             </div>
 
