Feature text styles updated, Other minor map changes

--- a/app/index.html
+++ b/app/index.html
@@ -618,7 +618,6 @@
                 <p id="map-more-text">
                   The map divides the United States into 740 commuting zones—places connected by local economies, which can cross city and state boundaries, and that include metro and rural areas. Click on a commuting zone for detailed information below.
                 </p>
-                <hr/>
               </div>
             </div>
 
@@ -998,8 +997,8 @@
 
               </div> <!-- detail view well -->
 
-              <div class="hr-wrapper">
-                <hr class="orange-hr"/>
+              <div class="footer">
+                <hr class="footer"/>
               </div>
 
 
