--- a/app/index.html
+++ b/app/index.html
@@ -629,7 +629,10 @@
 
                                         <div class="col-sm-12">
                                             <div id="control-collapse-toggle">
-                                                Click to Change Settings
+                                                <span class="settings-dropdown-icon">
+                                                  <i class="fa fa-3 fa-chevron-circle-down"></i> 
+                                                </span>
+                                                Change settings
                                             </div>
                                         </div>
 
@@ -768,36 +771,33 @@
                           <div class="container">
                             <div class="col-lg-12">
                               <div class="row">
-                                 <div class="col-sm-12">
-                                    <h2>Data Available for Download</h2>
-                                    <ul>
-                                      <li>
+                                 <div class="col-sm-4">
+                                    <h3>Data Available for Download</h3>
+                                      <div class="download-link">
                                           <a id="download-czone" href="">All data for all scenarios for the selected area (<span></span>).</a>
-                                      </li>
-                                      <li>
+                                      </div>
+                                      <div class="download-link">
                                           <a id="download-xwalk" href="data/Download/PopProj_GeoXwalk.xlsx">Geographic crosswalk between counties and commuting zones.</a>
-                                      </li>
-                                      <li>
+                                      </div>
+                                      <div class="download-link">
                                           <a id="download-map" href="">Map data for current assumption and boundary settings.</a>
-                                      </li>
-                                      <li>
+                                      </div>
+                                      <div class="download-link">
                                           <a id="download-full" href="data/Download/AllCZ_AllFert_AllMort_AllMig.csv">All available data (0.5GB).</a>
-                                      </li>
-                                    </ul>
+                                      </div>
+                                    <p><small>Copyright &copy; Urban Institute 2014</small></p>
                                 </div>
-                              </div>
-                              <div class="row">
-                                <div class="col-sm-12" id="credits">
-                                  <h4> PROJECT CREDITS </h4>
+                                <div class="col-sm-3" id="credits">
+                                  <h3> Project Credits </h3>
                                   <h5> WEB TOOL AND FEATURE </h5>
-                                  <h6 class="credit-title">STORY</h6>
-                                  Serena Lei
-                                  <h6 class="credit-title">EDITING</h6>
-                                  Elizabeth Forney
                                   <h6 class="credit-title">WEB DESIGN</h6>
                                   Adrienne Hapanowicz, Tim Meko
                                   <h6 class="credit-title">WEB DEVELOPMENT</h6>
                                   Ben Southgate, Graham MacDonald
+                                  <h6 class="credit-title">STORY</h6>
+                                  Serena Lei
+                                  <h6 class="credit-title">EDITING</h6>
+                                  Elizabeth Forney
                                   <h5> RESEARCH TEAM </h5>
                                   <h6 class="credit-title">PROJECT DIRECTOR</h6>
                                   Rolf Pendall
@@ -810,8 +810,9 @@
                                   <BR/>
 
                                 </div>
-                                <div class="col-sm-12" style="margin-top:20px;">
-                                  <p>Copyright &copy; Urban Institute 2014</p>
+                                <div class="col-sm-3">
+                                  <h3>Questions or Comments?</h3>
+                                  <a href="http://www.urban.org/about/contact.cfm">Let us know.</a>
                                 </div>
                               </div>
                             </div>
